# django-patternatlas

./: .bumpversion.cfg  .gitignore  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  setup.cfg  setup.py  tests_settings.py  tests_urls.py  tox.ini
patternatlas/: __init__.py  models.py  panels.py  publishers.py  renderers.py  serialiser.py  sitemaps.py  urls.py  views.py
patternatlas/static/debug_toolbar/js/: pattern_iframe.js
patternatlas/static/django_pygments/css/: pygments_default.css
patternatlas/static/patternatlas/css/: base.css  breadcrumbs.css  buttons.css
patternatlas/templates/debug_toolbar/panels/: patternatlas.html
patternatlas/templates/patternatlas/: _pattern.html  _pattern_complete.html  _root_readme.html  app_label.html  base.html  pattern.html  root.html
patternatlas/templatetags/: patternatlas.py
patternatlus/: __init__.py  models.py  views.py
patternatlus/static/patternatlus/css/: base.css
patternatlus/templates/patternatlus/: _pattern.html  app_label.html  base.html  pattern.html  root.html
test_project/: __init__.py  __main__.py  requirements.txt
test_project/another_test_app/: patterns.py
test_project/another_test_app/static/css/: example_progress.css
test_project/another_test_app/templates/: example_header.html  example_nested.html
test_project/test_app/: patterns.py
test_project/test_app/static/css/: example_base.css  example_breadcrumbs.css  example_pagination.css  example_table.css
test_project/test_app/templates/: example_breadcrumbs.html  example_pagination.html  example_table.html
