[pytest]
norecursedirs=.* *.egg .svn _build src bin lib local include
python_files=test_*.py

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[flake8]
max-line-length = 80

[check-manifest]
ignore =
    .travis.yml
    .bumpversion.cfg
    .idea
    .tox
    __pycache__
    bin
    include
    lib
    local
    share
    .Python
    htmlcov
